move script.js file location

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <img src="./assets/logo.svg" alt="Logo Habits" />
 
       <button>
-        <img src="./assets/plus.svg" alt="Sinal de Adição" /> <div>Registar o meu dia</div>
+        <img src="./assets/plus.svg" alt="Sinal de Adição" />
+        <div>Registar o meu dia</div>
       </button>
     </header>
     <form id="form-habits">
@@ -35,6 +36,6 @@
     </form>
 
     <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
